Wed Jul 05 13:19:52 2000  Steve Huston  <shuston@riverace.com>

        * ace/OS.h: Don't typedef pid_t for ACE_PSOS_DIAB_PPC - it's defined
          in sys/types.h.

Wed Jul 05 12:06:17 2000  Steve Huston  <shuston@riverace.com>

        * ace/OS.h: make the pSOS section adapt better to different pSOS
          versions which seem to define different sets of errno values.
          Also merge in some additions supplied by Matt Emerson
          <memerson@escient.com> to define needed types based on the
          ACE_PSOS_CANT_USE_SYS_TYPES config macro. (I think this macro
          may have been added a while back by someone else working on the
          pSOS port, but was not noted in this ChangeLog).

Wed Jul 05 11:24:51 2000  Steve Huston  <shuston@riverace.com>

        * ace/config-psos-diab-ppc.h: Added ACE_HAS_EXCEPTIONS in the
          non-g++ section.

Tue Jul  4 10:12:12 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/SUN_Proactor: Added a new method with the name/signature
  
          virtual int handle_events (ACE_Time_Value &);
	  
	  so that we get the appropriate overloading/overriding behavior.
  	  Thanks to Marina for reporting this.

	* ace/POSIX_Proactor.cpp: Removed unnecessary parens around
	  aiocb * and ACE_POSIX_Asynch_Result * to make certain compilers
 	  happy.  Thanks to Marina for reporting this.

	* ace/SUN_Proactor.cpp (handle_events): Fixed an ACE_ERROR that
	  should have been ACE_ERROR_RETURN.  Thanks to Marina for
 	  reporting this.
	  (start_aio): Fixed capitalization of "Op" to be "op".

	* ace/POSIX_Proactor.cpp,
	* ace/SUN_Proactor.cpp: Fixed improper use of TCHAR to be ACE_TCHAR
	  and also fixed another stray use of "int result".  Thanks to
 	  David Levine for reporting this.

Mon Jul  3 08:04:00 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/POSIX_Proactor.h (ACE_POSIX_AIOCB_Proactor): Fixed another
	  syntax error.  Thanks to David Levine for reporting it.
