@@ -398,7 +398,7 @@ protected:
   int mask_all (void) const;
   // To mask all the signals in a thread.
 
-  virtual int handle_events (unsigned long milli_seconds);
+  virtual int handle_events (u_long milli_seconds);
   // Dispatch a single set of events.  If <milli_seconds> elapses
   // before any events occur, return 0. Return 1 if a completion is
   // dispatched. Return -1 on errors.
