@@ -34,6 +34,12 @@ ACE_SUN_Proactor::handle_events (ACE_Time_Value &wait_time)
 }
 
 int
+ACE_SUN_Proactor::handle_events (void)
+{
+  return this->handle_events (ACE_INFINITE);
+}
+
+int
 ACE_SUN_Proactor::handle_events (u_long milli_seconds)
 {
   aio_result_t *result = 0;
